--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Lat2_AKB2_10116062_NosaCikalDaputra</string>
+
+    <!--Login Activity-->
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">login</string>
+    <string name="or">OR</string>
+    <string name="facebook">connect with facebook</string>
+    <string name="account">Doesn\'t have an account ?</string>
+    <string name="register">Register</string>
+    <string name="logo">Logo</string>
+
 </resources>
